# osm-import-landuse-veneto

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-frontend-gh-pages.yml
docs/: Metadati_c0506191_CCS2023.html  Metadati_c0506191_CCS2023.xml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: copsuolo_2023_14275_compare_bl.metadata.json  copsuolo_2023_14275_compare_pd.metadata.json  copsuolo_2023_14275_compare_ro.metadata.json  copsuolo_2023_14275_compare_tv.metadata.json  copsuolo_2023_14275_compare_ve.metadata.json  copsuolo_2023_14275_compare_vi.metadata.json  copsuolo_2023_14275_compare_vr.metadata.json  copsuolo_2023_14275_osm_bl.metadata.json  copsuolo_2023_14275_osm_pd.metadata.json  copsuolo_2023_14275_osm_ro.metadata.json  copsuolo_2023_14275_osm_tv.metadata.json  copsuolo_2023_14275_osm_ve.metadata.json  copsuolo_2023_14275_osm_vi.metadata.json  copsuolo_2023_14275_osm_vr.metadata.json  copsuolo_2023_14275_region_bl.metadata.json  copsuolo_2023_14275_region_pd.metadata.json  copsuolo_2023_14275_region_ro.metadata.json  copsuolo_2023_14275_region_tv.metadata.json  copsuolo_2023_14275_region_ve.metadata.json  copsuolo_2023_14275_region_vi.metadata.json  copsuolo_2023_14275_region_vr.metadata.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BasemapSwitch.tsx  DatasetSwitch.tsx  InspectPanel.tsx  Legend.tsx  LegendItem.tsx  MapView.tsx  OpacitySlider.tsx  Panel.tsx  SourceStatus.tsx
frontend/src/hooks/: useMap.ts  useMapInteraction.ts  useMapLayers.ts
frontend/src/lib/: datasets.ts  format.ts  map-style.ts  metadata.ts  pmtiles.ts
src/: list_distinct_tag_keys.py
src/copsuolo/: __init__.py  config.py  convert.py  download.py
src/copsuolo/translation/: landuse.py  map_copsuolo.yaml
